# mini-gateway

./: .gitignore  CMakeLists.txt  README.md
src/: .env  CMakeLists.txt  Vagrantfile  docker-compose.yml
src/db-manager/: db-manager-entrypoint.sh
src/db-manager/include/: db-manager-main.h
src/db-manager/src/: db-manager-main.cc
src/docs/: README.md
src/include/: base64.h  parser.h
src/internal-message-server/: CMakeLists.txt  internal-message-entrypoint.sh
src/internal-message-server/include/: IMS_atalk.h  IMS_base.h  IMS_ftalk.h  internal_message_server_main.h
src/internal-message-server/src/: test_request.cc
src/internal-message-server/src/atalk/: IMS_atalk.cc
src/internal-message-server/src/mms/: IMS_mms.cc
src/proxy/: proxy-entrypoint.sh
src/proxy/docs/: README.md
src/proxy/include/: proxy.hh
src/proxy/src/: proxy.cc  test_proxy.cc  test_request.cc
titedios/: .dockerignore  .env  CMakeLists.txt  Dockerfile  Vagrantfile  base-entrypoint.sh  boot-strap.sh  docker-compose.yml
titedios/.vagrant/machines/default/virtualbox/: action_set_name  id  index_uuid  private_key
titedios/db-manager/: CMakeLists.txt
titedios/db-manager/src/: test-db-manager-main.cc
titedios/docs/: README.md  communication_between_proxy_and_IAS.md
titedios/gw-proxy/: .dockerignore  Dockerfile
titedios/gw-proxy/docs/: README.md
titedios/gw-proxy/include/: proxy.hh
titedios/gw-proxy/src/: proxy.cc
titedios/include/: base64.h  mini-gw-common.h  parser.h  test.h  util-mmf.h
titedios/internal-API-server/: .dockerignore  CMakeLists.txt  Dockerfile  internal-API-entrypoint.sh
titedios/internal-API-server/include/: internal_API_server.h  my_server.h
titedios/internal-API-server/src/: internal_API_server.cc  my_server.cc  my_server_main.cc  test_internal_API_server.cc
titedios/internal-message-server/: CMakeLists.txt
titedios/internal-message-server/include/: IMS_atalk.h  IMS_base.h  IMS_ftalk.h  IMS_mms.h  IMS_sms.h  internal_message_server_main.h
titedios/internal-message-server/src/: IMS_test.cc  internal_message_server_main.cc  test_internal_message_server.cc
titedios/internal-message-server/src/atalk/: IMS_atalk.cc
titedios/internal-message-server/src/ftalk/: IMS_ftalk.cc
titedios/internal-message-server/src/mms/: IMS_mms.cc
titedios/internal-message-server/src/sms/: IMS_sms.cc
titedios/internal-messaging-server/: CMakeLists.txt
titedios/internal-messaging-server/docs/: IMS_API.md
titedios/internal-messaging-server/include/: IMS_atalk.h  IMS_mms.h  IMS_sms.h  IMS_test.h  internal_message_server.h  internal_message_server_main.h
titedios/internal-messaging-server/src/: internal_message_server.cc  internal_message_server_main.cc  test_internal_message_server.cc  test_request.cc
titedios/proxy/: .dockerignore  CMakeLists.txt  Dockerfile  proxy-entrypoint.sh
titedios/proxy/config/: proxy.conf
titedios/proxy/include/: proxy.hh
titedios/proxy/src/: proxy.cc  test_client.cc  test_cpp_rest.cc  test_request.cc
titedios/src/: test.cc
titedios/vendor-kakao/: kakao-entrypoint.sh
